# tcc-edge-ai-path-planning

./: .gitignore  README.md
AStar/: Makefile  README.md  astar.c  astar.h  main.c  test_maps.c  test_maps.h
Python_Trainer/: Coach.py  Distiller.py  Metrics.py  README.md  Visualizer.py  best_model_comparison.py  bin2map.py  check.py  comparar_mapas.py  compare_results.py  convertKeras2ONNX.py  convertKeras2TFLite.py  csv_to_npz.py  generate_architecture_diagram.py  iou_metric.py  main.py  pipeline.py  pyproject.toml  quantization.py  test.py  test_keras_model.py  test_models.py  test_onnx_model.py  test_tflite_model.py  validate_device.py
Python_Trainer/results/result_W064xH064_D01_S000000_E001000/: best_path_finder_Unet1_1_dynamic_quantized.onnx  best_path_finder_Unet1_1_static_quantized.onnx
Python_Trainer/results/result_W064xH064_D01_S000000_E005000/: student_distilled_quantized_static.onnx
Python_Trainer/tests/: README.md  infer.py  test_keras_model.py  test_models.py  test_onnx_model.py  test_tflite_model.py
Python_Trainer/utils/: README.md  bin_to_map.py  convert_npy.py  csv2header.py  csv_to_header.py  csv_to_npz.py  npy_to_header.py  quantization_onnx.py  quantize_onnx.py
Python_Trainer/validations/: README.md  analyze_training_results.py  best_model_comparison.py  compare.py  compare_maps.py  compare_models.py  compare_results.py  plot_result.py
workspace_stm32/: .gitignore
workspace_stm32/TCC_H743/: .gitignore
