[project]
name = "python-trainer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.9.13"
dependencies = [
    "matplotlib>=3.9.4",
    "numpy==1.26.4",
    "pandas>=2.3.3",
    "scikit-learn>=1.6.1",
    "scipy>=1.13.1",
    "tensorflow[and-cuda]==2.18",
    "tf2onnx>=1.16.1",
]

[dependency-groups]
dev = []

[tool.uv.sources]
tf2onnx = { git = "https://github.com/onnx/tensorflow-onnx" }
